Changes pulled from stagnant working branch

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@ Sometimes, this is a never-ending process.</p>
 <li><em>(2016)</em> command-line stack-based RPN calculator — <a href="https://github.com/microsounds/hpsh"><code>microsounds/hpsh</code></a></li>
 </ul>
 <h3>Contact me</h3>
-<p>If it’s about a project, feel free to open an issue.</p>
+<p>If it’s about a project or an article on this website, feel free to open an issue or a pull request on Github.</p>
 <div class="index">
 </div>
 <hr>
