--- a/notes/index.htm
+++ b/notes/index.htm
@@ -26,7 +26,7 @@
 <div class="content">
 <!--kagami v0.4.2 — static microblog processor-->
 <h1>Notes</h1>
-<p>Miscellaneous writings, sorted by date.</p>
+<p>Notes on misc. technical subjects, sorted by date of last update.</p>
 <div class="index">
 <ul>
 <li><a href="dotfiles.htm">Selected documentation and usage notes for my dotfiles</a> — <em>September 2021</em></li>
