--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -28,6 +28,12 @@
 <!--updated 2020/10/22-->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)</h1>
 <p>🌖 Thu, Oct 22nd, 2020</p>
+<blockquote>
+<p>This list is not obsolete, there have been no new LP cards announced or released since 2020.
+However, the retail and aftermarket prices of every worthwhile discrete GPU on this list have skyrocketed to obscene levels since this article was first written.
+Due to market forces, manufacturers have very little incentive to exchange or replace a defective card under warranty, opting to refund your purchase price instead, this will almost certainly be less than the current market value of your card, you have been warned.
+<br><em><strong>Suggestion: Buy an AMD APU-based SFF system and play your games on low/medium. Add a dGPU down the road if availability and prices ever go back to normal.</strong></em></p>
+</blockquote>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
 <p>For our purposes <strong>“low profile”</strong> refers to cards that are half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 Think space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, and other niche form-factors.</p>
@@ -237,9 +243,9 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 </tr>
 <tr>
 <td align="left"><em>Nvidia Ampere-based LP card</em></td>
-<td align="center">2021?</td>
+<td align="center"><del>2021?</del> NEVER EVER</td>
 <td align="center">?</td>
-<td align="left"><em>Low-end, low profile iterations of RTX 30* series cards will probably be announced by 2021.</em></td>
+<td align="left"><del><em>Low-end, low profile iterations of RTX 30* series cards will probably be announced by 2021.</em></del></td>
 </tr>
 </tbody>
 </table>
