--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -9,9 +9,7 @@
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
-<audio loop hidden id="bgm">
-	<source type="audio/ogg" src="{DOC_ROOT}/static/wind1_loop.opus">
-</audio>
+<audio loop hidden id="bgm"></audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"></a>
 	<div class="container">
