--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -9,9 +9,7 @@
 	<title>Selected documentation and usage notes for my dotfiles | sentimental µsounds</title>
 </head>
 <body>
-<audio loop hidden id="bgm">
-	<source type="audio/ogg" src="/static/wind1_loop.opus">
-</audio>
+<audio loop hidden id="bgm"></audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
 	<div class="container">
