Append unicode variation selector to force render glyphs as text

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -27,7 +27,7 @@
 <!--kagami v0.4.2 — static microblog processor-->
 <!--updated 2020/10/22-->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)</h1>
-<p>🌖 Thu, Oct 22nd, 2020</p>
+<p>🌖&#xFE0E; Thu, Oct 22nd, 2020</p>
 <blockquote>
 <p>This list is not obsolete, there have been no new LP cards announced or released since 2020.
 However, the retail and aftermarket prices of every worthwhile discrete GPU on this list have skyrocketed to obscene levels since this article was first written.
