--- a/404.html
+++ b/404.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<!--idk lol-->
 	<title>404 NOT FOUND</title>
-<!--	<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=saYQAo9bvRI&t=1381s" />-->
+	<meta http-equiv="refresh" content="1; url=https://www.youtube.com/watch?v=saYQAo9bvRI&t=1381s" />
 </head>
 <body>
+<!--distract the user with something dumb-->
 <script>
-	/* distract the user by redirecting to something dumb */
 	var urls = [
 		"https://www.youtube.com/watch?v=saYQAo9bvRI&t=1381s",
 		"https://www.youtube.com/watch?v=UxYaFvzSv2U&t=1946s",
@@ -15,6 +14,5 @@
 	window.location.replace(urls[Math.floor(Math.random() * urls.length)]);
 </script>
 <h1>404 NOT FOUND</h1>
-
 </body>
 </html>
