Made a new favicon

--- a/notes/index.htm
+++ b/notes/index.htm
@@ -5,7 +5,7 @@
 	<meta name="theme-color" content="#E2FAF9">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk">
-	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
 	<script type="text/javascript" src="/static/script.js"></script>
 	<title>Notes | sentimental µsounds</title>
