Scary red warning

--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>404 NOT FOUND</title>
+	<title>404~♪</title>
 	<meta http-equiv="refresh" content="1; url=https://www.youtube.com/watch?v=ZOf0K9nFxog">
 </head>
-<body>
-	<h1>404 NOT FOUND</h1>
+<body style="background-color: #FF0000;">
+	<div style="font-size: 200px;">404</div>
 	<script type="text/javascript">
 		'use strict';
 
@@ -54,7 +54,7 @@
 			'https://www.youtube.com/watch?v=HgjyQ0_coJo', /* Nyan~ Neko Sugar Girls: All Episodes */
 		];
 		var sel = urls[Math.floor(Math.random() * urls.length)];
-		document.body.innerHTML = '<h1>Taking you to ' + sel + '!</h1>';
+<!--		document.body.innerHTML = '<h1>Taking you to ' + sel + '!</h1>';-->
 		window.location.replace(sel);
 	</script>
 </body>
