Added dynamic shimejis, updated copyright text

--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -1,8 +1,8 @@
 <hr>
 <div class="footnote">
 <p>
-site text CC BY-SA 4.0, source code GNU GPLv3+ —
-&copy; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br>
+written materials <a href="{CC_BY_SA}">CC BY-SA 4.0</a>, source code <a href="{GNU_GPL}">GNU GPLv3+</a>
+— &copy; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br>
 Powered by <a href="{GIT_REMOTE}/kagami">{VERSION}</a>
 </p>
 </div>
