--- a/index.htm
+++ b/index.htm
@@ -83,8 +83,8 @@ Sometimes, this is a never-ending process.</p>
 <hr>
 <div class="footnote">
 <p>
-site text CC BY-SA 4.0, source code GNU GPLv3+ —
-&copy; 2015-2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
+— &copy; 2015-2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
 Powered by <a href="https://github.com/microsounds/kagami">kagami v0.5.3 — static microblog processor</a>
 </p>
 </div>
