--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -7,7 +7,7 @@
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk">
 	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico">
 	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css">
-	<script type="text/javascript" src="{DOC_ROOT}/static/script.js"></script>
+	<script src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="{GIT_REMOTE}">my github</a></li>
 			<li><a href="{DOC_ROOT}/notes/dotfiles.htm">my dotfiles</a></li>
-			<li><a href="{DOC_ROOT}/notes/index.htm">notes</a></li>
+			<li><a href="{DOC_ROOT}/notes/index.htm">my notes</a></li>
 		</ul>
 	</div>
 </div>
