--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<script type="text/javascript" src="/static/script.js"></script>
+	<script src="/static/script.js"></script>
 	<title>Homepage | sentimental µsounds</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
-			<li><a href="/notes/index.htm">notes</a></li>
+			<li><a href="/notes/index.htm">my notes</a></li>
 		</ul>
 	</div>
 </div>
@@ -29,13 +29,20 @@
 <!--kagami v0.5.3 — static microblog processor-->
 <h1>Homepage</h1>
 <p><img src="/static/starry.png" alt="header" /></p>
-<h3>About me</h3>
+<h2>About me</h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf">unix programming environment</a>.
 I like to have <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again">this album</a> in the background sometimes.</p>
-<p>More importantly, I enjoy automating things in such a way that they can be left alone and never thought about again.
-Sometimes, this is a never-ending process.</p>
-<h3>Things I’ve made recently</h3>
+<p>More importantly, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
+Sometimes, I’ll do this to force myself to try new things.</p>
+<div style="filter: grayscale(65%); font-style: italic; text-align: right;">
+For example, this website, the superset of github flavored markdown I built up to author this site, and the static site generator I wrote that ties it all together were a result of me wanting to get into long form writing.
+<p>That’s the excuse I give myself, anyway. I don’t actually care for long form writing, I just really like metaprogramming.</p>
+<p>It’s a never-ending process.</p>
+<div><img alt="scripts" src="/static/shimemiku/shime32.png"></div>
+</div>
+<hr style="width: 40%">
+<h2>Things I’ve made recently</h2>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
 <ul>
@@ -49,16 +56,16 @@ Sometimes, this is a never-ending process.</p>
 </li>
 <li><em>(2019–present)</em> this website and it’s <code>kagami</code> template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a></li>
 </ul>
-<h3>Old projects</h3>
+<h2>Old projects</h2>
 <ul>
 <li><em>(2016–2017)</em> <em><strong>[retired]</strong></em> lightweight futaba-like messageboard system in C — <a href="https://github.com/microsounds/akari-bbs"><code>microsounds/akari-bbs</code></a></li>
 <li><em>(2016)</em> CPU-based tripcode generator for futaba-like imageboards — <a href="https://github.com/microsounds/tripforce"><code>microsounds/tripforce</code></a></li>
 <li><em>(2016)</em> <em><strong>[retired]</strong></em> command-line utility for scraping Bandcamp albums — <a href="https://github.com/microsounds/bc-dl"><code>microsounds/bc-dl</code></a></li>
 <li><em>(2016)</em> command-line stack-based RPN calculator — <a href="https://github.com/microsounds/hpsh"><code>microsounds/hpsh</code></a></li>
 </ul>
-<h3>Contact me</h3>
-<p>If it’s about a project or an article on this website, feel free to open an issue or a pull request on Github.</p>
-<h3>Misc</h3>
+<h2>Contact me</h2>
+<p>If it’s about a project or an article on this website, feel free to open an issue or a pull request on GitHub.</p>
+<h2>Misc</h2>
 <div style="width: 70%; margin-left: auto; margin-right: auto;">
 <!-- distract the user -->
 <a href="/eeeeeeeeeeeeeeeeeeeee">
