--- a/notes/index.htm
+++ b/notes/index.htm
@@ -7,7 +7,7 @@
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<script type="text/javascript" src="/static/script.js"></script>
+	<script src="/static/script.js"></script>
 	<title>Notes | sentimental µsounds</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
-			<li><a href="/notes/index.htm">notes</a></li>
+			<li><a href="/notes/index.htm">my notes</a></li>
 		</ul>
 	</div>
 </div>
