Rewrote home page to use markdown inline images

--- a/index.htm
+++ b/index.htm
@@ -28,18 +28,28 @@
 <div class="content">
 <!--kagami v0.5.4 — static microblog processor-->
 <h1>Homepage</h1>
-<p><img src="/static/starry.png" alt="header" /></p>
+<!-- stylesheet override -->
+<!-- prevent borders around transparent inline images on this page only -->
+<style>p img { border: unset; }</style>
+<p><img src="/static/starry.png"
+alt="starry night sky"
+style="max-width: 100%; border: 1px solid #CCC;"
+/></p>
 <h2>About me</h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf">unix programming environment</a>.
 I like to have <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again">this album</a> in the background sometimes.</p>
 <p>More importantly, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
 Sometimes, I’ll do this to force myself to try new things.</p>
-<div style="filter: grayscale(65%); font-style: italic; text-align: right;">
-For example, this website, the superset of github flavored markdown I built up to author this site, and the static site generator I wrote that ties it all together were a result of me wanting to get into long form writing.
-<p>That’s the excuse I give myself, anyway. I don’t actually care for long form writing, I just really like metaprogramming.</p>
+<div class="right" style="filter: grayscale(65%); font-style: italic;">
+For example, this website,
+the superset of github flavored markdown I built up to author this site,
+and the static site generator I wrote that ties it all together were a result of me wanting to get into long form writing.
+<p>That’s the excuse I give myself, anyway.
+I don’t actually care for long form writing,
+I just really like metaprogramming.</p>
 <p>It’s a never-ending process.</p>
-<div><img alt="scripts" src="/static/shimemiku/shime32.png"></div>
+<p><img src="/static/shimemiku/shime32.png" alt="scripts" /></p>
 </div>
 <hr style="width: 40%">
 <h2>Things I’ve made recently</h2>
@@ -66,22 +76,19 @@ For example, this website, the superset of github flavored markdown I built up t
 <h2>Contact me</h2>
 <p>If it’s about a project or an article on this website, feel free to open an issue or a pull request on GitHub.</p>
 <h2>Misc</h2>
-<div style="width: 70%; margin-left: auto; margin-right: auto;">
-<!-- distract the user -->
-<a href="/eeeeeeeeeeeeeeeeeeeee">
-	<img alt="filler" src="/static/button/88x31whitemarble.gif">
-	<img alt="filler" src="/static/button/88x31pinkmarble.gif">
-</a>
-<a href="https://www.debian.org/distrib"><img alt="debian" src="/static/button/debian.png"></a>
-<a href="https://nano-editor.org"><img alt="nano" src="/static/button/nano.png"></a>
-<a href="https://www.youtube.com/watch?v=JmvOuyeqoLw&amp;list=PLJQumuuts49qC9sbhf4Deky0-XZuY09A_"><img alt="vocaloid" src="/static/button/vocaloid.gif"></a>
-<a href="https://www.youtube.com/watch?v=3rsBLRFONEs"><img alt="miku1" src="/static/button/hatsunemiku1.gif"></a>
-<a href="https://www.youtube.com/watch?v=NJAghsisnok"><img alt="miku2" src="/static/button/miku.gif"></a>
-<a href="https://www.youtube.com/watch?v=KGD-mFTY6mw"><img alt="lucky star" src="/static/button/konata.gif"></a>
-<a href="https://validator.w3.org/check/referer"><img alt="html" src="/static/button/valid-html5-blue.svg"></a>
-<a href="https://jigsaw.w3.org/css-validator/check/referer"><img alt="css" src="/static/button/valid-css-blue.png"></a>
-<a href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="cc" src="/static/button/cc.png"></a>
-<a href="https://www.gnu.org/licenses/gpl-3.0.en.html"><img alt="gpl" src="/static/button/gplv3.gif"></a>
+<div class="center" style="width: 70%;">
+<p><a href="/eeeeeeeeeeeeeeeeee"><img src="/static/button/88x31whitemarble.gif" alt="filler1" /></a>
+<a href="/EEEEEEEEEEEEEEEEEEEEEEE"><img src="/static/button/88x31pinkmarble.gif" alt="filler2" /></a>
+<a href="https://debian.org/distrib"><img src="/static/button/debian.png" alt="debian" /></a>
+<a href="https://nano-editor.org"><img src="/static/button/nano.png" alt="nano" /></a>
+<a href="https://www.youtube.com/watch?v=JmvOuyeqoLw&amp;list=PLJQumuuts49qC9sbhf4Deky0-XZuY09A_"><img src="/static/button/vocaloid.gif" alt="vocaloid" /></a>
+<a href="https://www.youtube.com/watch?v=3rsBLRFONEs"><img src="/static/button/hatsunemiku1.gif" alt="miku1" /></a>
+<a href="https://www.youtube.com/watch?v=NJAghsisnok"><img src="/static/button/miku.gif" alt="miku2" /></a>
+<a href="https://www.youtube.com/watch?v=KGD-mFTY6mw"><img src="/static/button/konata.gif" alt="konata" /></a>
+<a href="https://validator.w3.org/check/referer"><img src="/static/button/valid-html5-blue.svg" alt="html" /></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="/static/button/valid-css-blue.png" alt="css" /></a>
+<a href="https://creativecommons.org/licenses/by-sa/4.0"><img src="/static/button/cc.png" alt="cc" /></a>
+<a href="https://www.gnu.org/licenses/gpl-3.0"><img src="/static/button/gpl.png" alt="gpl" /></a></p>
 </div>
 <!-- Bell System Technical Journal July-August 1978 Vol. 57, No. 6, Part 2 -->
 <!-- [unix]: http://emulator.pdp-11.org.ru/misc/1978.07_-_Bell_System_Technical_Journal.pdf -->
