Added styling for footnote references

--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -1,5 +1,5 @@
 <hr>
-<div class="footnote">
+<div class="footer">
 <p>
 written materials <a href="{CC_BY_SA}">CC BY-SA 4.0</a>, source code <a href="{GNU_GPL}">GNU GPLv3+</a>
 — &copy; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br>
