Added thematic breaks, serving diferent raw URLs in dotfiles.md

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@ I just really like metaprogramming.</p>
 <p>It’s a never-ending process.</p>
 <p><img src="/static/shimemiku/shime32.png" alt="scripts" /></p>
 </div>
-<hr style="width: 40%">
+<p><hr style="width: 40%;" /></p>
 <h2>Things I’ve made recently</h2>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
