--- a/404.html
+++ b/404.html
@@ -23,6 +23,11 @@
 			'https://www.youtube.com/watch?v=SeVAhNUo7ko', /* 【Project DIVA 2nd】　2D OR NOT 2D　【鏡音レン・KAITO他】*/
 			'https://www.youtube.com/watch?v=KivVBtZdYGM', /* The Ultimate Desu */
 			'https://www.youtube.com/watch?v=XpAWbMtKO5k', /* La Bikina Hatsune Miku */
+			'https://www.youtube.com/watch?v=t9bbMvbnXsY', /* Patty Sand Canyon */
+			'https://www.youtube.com/watch?v=pNMRBTN1SGU', /* Ferris' Sand Canyon */
+			'https://www.youtube.com/watch?v=eF_Gj3JdWP4', /* 【English Sub】 Fight Against Dangerous Kyouko 【Yuru Yuri】*/
+			'https://www.youtube.com/watch?v=OjkazwKhQlY', /* Fight Against Dangerous Hirasawa Yui & Susumu */
+			'https://www.youtube.com/watch?v=pIx9Bw8qYDk', /* Fight Against a Dangerous Keyboard Crusher [Super Mario RPG] */
 			'https://www.youtube.com/watch?v=HmWf-aoF_v8', /* Miku "We are POP☆CANDY!" with English Lyric */
 			'https://www.youtube.com/watch?v=1gHHgx8bTxc', /* sasakure.UK - *Hello, Planet. feat. Miku Hatsune / ＊ハロー、プラネット。 */
 			'https://www.youtube.com/watch?v=KGD-mFTY6mw', /* THE MOST SUPER KAWAII-EST LUCKY STAR FANDUB EVER. */
