Preparing for kagami v0.6

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="{ACCENT_COLOR}">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk">
-	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico">
-	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css">
+	<meta charset="UTF-8"/>
+	<meta name="theme-color" content="{ACCENT_COLOR}"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
+	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico"/>
+	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css"/>
 	<script src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
 <audio hidden id="bgm"></audio>
 <div class="navbar">
-	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"></a>
+	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/></a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
 		<div class="subtitle">{SITE_SUBTITLE}</div>
