Changes preparing for kagami v0.6, added self-closing tags

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -16,7 +16,7 @@
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/></a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
-		<div class="subtitle">{SITE_SUBTITLE}</div>
+		<div class="subtitle">{SITE_DESCRIPTION}</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="{GIT_REMOTE}">my github</a></li>
